# RL-ABC

./: LICENSE  README.md  big_beamline_original_0.csv  config.json  config.yaml  config_manager.py  ddpg_debug_logger.csv  ddpg_logger.csv  elegant_input.lte  environment.yml  modifide_machine_no_finalWP.lte  people.csv  pyproject.toml  rbBig_beamline_original_0.pkl  requirements.txt  sb_train.py  sdds_output.csv  temp_modified_machine.lte  track.ele  track_0.ele  train.py  unchanged_input.lte  updated_machine_0.lte  visualization.ipynb
classical_optimizers/: README.md  bayesian_optimization.py  scipy_optimization.py
docs/: COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DYNAMIC_PATH_RESOLUTION.md  ELEGANT_INPUT_GUIDE.md  IMPORT_FIXES.md  IMPORT_FIXES_DETAILED.md  MIGRATION_CHECKLIST.md  PROJECT_INVENTORY.md  QUICK_REFERENCE.md  SETUP.md  classical_optimizers_guide.md  stable_baselines3_guide.md
inputs_0/: elegant_input0.txt  elegant_input1.txt  elegant_input10.txt  elegant_input11.txt  elegant_input12.txt  elegant_input2.txt  elegant_input3.txt  elegant_input4.txt  elegant_input5.txt  elegant_input6.txt  elegant_input7.txt  elegant_input8.txt  elegant_input9.txt
logs/: ddpg_eval_3036000.csv
logs_0/: ddpg_eval_130.csv
models/: ddpg_actor_target_3036000.pth  ddpg_critic_3036000.pth
models_0/: ddpg_actor_best.pth
observs_0/: obs_WBM1_1.csv  obs_WBM4_1.csv  obs_WQ1L0_1.csv  obs_WQ1L10_1.csv  obs_WQ1L1_1.csv  obs_WQ1L2_1_1.csv  obs_WQ1L2_2_1.csv  obs_WQ1L3_1_1.csv  obs_WQ1L3_2_1.csv  obs_WQ1L4_1_1.csv  obs_WQ1L4_2_1.csv  obs_WQ1L7_1.csv  obs_WQ1L9_1.csv  (+1 more)
(+35 files in other folders)
